rest/deployement.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: rest-image
spec:
  selector:
    matchLabels:
      app: rest-image
  replicas: 1
  template:
    metadata:
      labels:
        app: rest-image
    spec:
      containers:
      - name: rest-image
        image: vinay121996/rest-image
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
        ports:
        - containerPort: 5000
