rest/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rest-svc
spec:
  type: NodePort
  selector:
    app: rest-image
  ports:
  - name: http
    protocol: "TCP"
    port: 80
    targetPort: 5000
